force-app/main/default/objects/Project_Types__mdt/Project_Types__mdt.object-meta.xml
<CustomObject>
    <description
  >This metadata determines the type of project and created a project record accordingly</description>
    <label>Project Type</label>
    <pluralLabel>Project Types</pluralLabel>
</CustomObject>