force-app/main/default/objects/Project_Types__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
  >This are the types that are included in the project object</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
                <default>true</default>
                <label>Feature</label>
            </value>
            <value>
                <fullName>Tech Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>