force-app/main/default/objects/Project_Types__mdt/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <description>The Project Lead</description>
    <inlineHelpText>Select the Id of the project Lead</inlineHelpText>
    <label>Lead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>