force-app/main/default/objects/Project_Types__mdt/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>This is the project portfolio project</description>
    <inlineHelpText>Select the portfolio id</inlineHelpText>
    <label>Portfolio</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>