force-app/main/default/objects/Project_Types__mdt/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <description>Selecting the product owner</description>
    <inlineHelpText
  >Add the id of the product owner, if no product owner id, the opportunity contact will become the product owner.</inlineHelpText>
    <label>Product Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>