force-app/main/default/objects/Project_Types__mdt/fields/Project_Dates__c.field-meta.xml
<CustomField>
    <fullName>Project_Dates__c</fullName>
    <description
  >This project is to set a standard of days to work on a project</description>
    <inlineHelpText
  >Select here the number of days to standardize the project timeline</inlineHelpText>
    <label>Project Dates</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>