force-app/main/default/objects/Project_Types__mdt/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Project Manager ID</description>
    <inlineHelpText
  >Set the project Manager Id, if no id is specified, then the default will be Sebastian Torres.</inlineHelpText>
    <label>Project Manager</label>
    <length>20</length>
    <type>Text</type>
</CustomField>