force-app/main/default/objects/Project_Types__mdt/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description
  >This field will define the team to work on a project</description>
    <inlineHelpText>Select the team to work on this project</inlineHelpText>
    <label>Team</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>